<resources>
    <string name="app_name">ExplorAndes</string>
    <string name="hello_world">Hello World!</string>
    <string name="search_hint">Where to go?</string>
    <string name="buildings">Buildings</string>
    <string name="events">Events</string>
    <string name="food_rest">Food &amp; Rest</string>
    <string name="study_spaces">Study Spaces</string>
    <string name="services">Services</string>
    <string name="recommendations">Recommendations</string>
    <string name="see_all">See all</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="navigate">Navigate</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <!-- Building Detail strings -->
    <string name="building_image">Building Image</string>
    <string name="places_in_this_building">Places in this Building</string>
    <string name="no_places_available">No places available in this building</string>
    <!-- Place Item strings -->
    <string name="place_image">Place Image</string>
    <!-- Category Item strings -->
    <string name="category_icon">Category Icon</string>
    <!-- Navigation Fragment strings -->
    <string name="navigation">Navigation</string>
    <string name="search_places">Search places…</string>
    <string name="no_places_found">No places found</string>
    <string name="event_image">Event Image</string>
    <string name="now_playing">Now Playing</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="share">Share</string>
    <string name="date_and_time">Date and Time</string>
    <string name="tap_to_view_location">Tap to view location on map</string>
    <string name="tap_to_view_location_on_map">Tap to view location on map</string>
    <string name="share_event">Share event</string>
    <string name="my_location">Mi ubicación</string>
    <string name="start_navigation">Iniciar navegación</string>
    <string name="view_on_map">Ver en mapa</string>
    <string name="map">Mapa</string>
    <string name="google_maps_key" translatable="false">AIzaSyA8JC9Rq6DveYWY4ylpomY5UOcxrd2qqak</string>
    <string name="view">View</string>
    <string name="all">All</string>

</resources>